crates/reinhardt-core/macros/tests/ui/model/fail/no_primary_key.stderr
error: Model must have at least one primary key field
 --> tests/ui/model/fail/no_primary_key.rs:8:8
  |
8 | struct User {
  |        ^^^^
